--- a/workshop/discount/pom.xml
+++ b/workshop/discount/pom.xml
@@ -81,6 +81,18 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Property base testing : junit-quickcheck -->
+		<dependency>
+			<groupId>com.pholser</groupId>
+			<artifactId>junit-quickcheck-core</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.pholser</groupId>
+			<artifactId>junit-quickcheck-generators</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
