--- a/workshop/fruit-shop-basket/angular.json
+++ b/workshop/fruit-shop-basket/angular.json
@@ -62,7 +62,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "fruit-shop-basket:build"
+            "browserTarget": "fruit-shop-basket:build",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
