--- a/workshop/fruit-shop-basket/package.json
+++ b/workshop/fruit-shop-basket/package.json
@@ -28,9 +28,12 @@
     "@angular/cli": "~9.0.3",
     "@angular/compiler-cli": "~9.0.2",
     "@angular/language-service": "~9.0.2",
-    "@types/node": "^12.11.1",
+    "@pact-foundation/karma-pact": "^2.3.1",
+    "@pact-foundation/pact-node": "^10.4.0",
+    "@pact-foundation/pact-web": "^9.7.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
