--- a/workshop/discount/pom.xml
+++ b/workshop/discount/pom.xml
@@ -93,6 +93,13 @@
 			<version>0.9.1</version>
 		</dependency>
 
+		<!-- Contract testing : Pact -->
+		<dependency>
+			<groupId>au.com.dius</groupId>
+			<artifactId>pact-jvm-provider-junit5</artifactId>
+			<version>4.0.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -124,33 +131,6 @@
 				</dependencies>
 			</plugin>
 
-			<!-- Contract testing : Pact -->
-			<plugin>
-				<groupId>au.com.dius</groupId>
-				<artifactId>pact-jvm-provider-maven</artifactId>
-				<version>4.0.0</version>
-				<configuration>
-					<serviceProviders>
-						<!-- You can define as many as you need, but each must have a unique name -->
-						<serviceProvider>
-							<name>cash-register</name>
-							<!-- All the provider properties are optional, and have sensible defaults (shown below) -->
-							<protocol>http</protocol>
-							<host>localhost</host>
-							<port>8080</port>
-							<path>/</path>
-							<consumers>
-								<!-- Again, you can define as many consumers for each provider as you need, but each must have a unique name -->
-								<consumer>
-									<name>basket</name>
-									<!--  currently supports a file path using pactFile or a URL using pactUrl -->
-									<pactFile>path/to/provider1-consumer1-pact.json</pactFile>
-								</consumer>
-							</consumers>
-						</serviceProvider>
-					</serviceProviders>
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
 
