--- a/workshop/fruit-shop-basket/package.json
+++ b/workshop/fruit-shop-basket/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "publish-pacts": "node publish-pacts.ts"
   },
   "private": true,
   "dependencies": {
