--- a/workshop/discount/pom.xml
+++ b/workshop/discount/pom.xml
@@ -47,6 +47,7 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- Unit Testing -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
