--- a/workshop/discount/pom.xml
+++ b/workshop/discount/pom.xml
@@ -51,25 +51,19 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>org.junit.vintage</groupId>
-					<artifactId>junit-vintage-engine</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 
 		<!-- To write BDD -->
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-java</artifactId>
-			<version>5.1.3</version>
+			<version>5.5.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-junit</artifactId>
-			<version>5.1.3</version>
+			<version>5.5.0</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -137,6 +131,21 @@
 						<version>0.12</version>
 					</dependency>
 				</dependencies>
+			</plugin>
+
+			<!-- Living documentation : cukedoctor -->
+			<plugin>
+				<groupId>com.github.cukedoctor</groupId>
+				<artifactId>cukedoctor-maven-plugin</artifactId>
+				<version>1.2.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>execute</goal>
+						</goals>
+						<phase>package</phase>
+					</execution>
+				</executions>
 			</plugin>
 
 		</plugins>
