--- a/workshop/discount/pom.xml
+++ b/workshop/discount/pom.xml
@@ -59,6 +59,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>3.9.0</version>
+			<scope>test</scope>
+		</dependency>
 
 		<!-- To write BDD -->
 		<dependency>
