--- a/workshop/discount/pom.xml
+++ b/workshop/discount/pom.xml
@@ -93,6 +93,12 @@
 			<version>0.26</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>net.jqwik</groupId>
+			<artifactId>jqwik</artifactId>
+			<version>1.5.1</version>
+			<scope>test</scope>
+		</dependency>
 
 
 		<!-- Contract testing : Pact -->
